# Video-effects---CV

./: CMakeLists.txt  README.md  filters.cpp  filters.h  vidDisplay.cpp
